Resolved the conflicts.